Revert "change Theme"
This reverts commit 979c203a29176d6b4509119f032ec7d1cc958292.

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,11 +1,8 @@
 header.header
-    .header__column
+    div.header__column
         a(href=routes.home)
             i.fab.fa-youtube
-    .header__column
-        form(action=routes.search, method="get")
-            input(type="text", placeholder="Search by term...", name="term")
-    .header__column
+    div.header__column
         ul  
             li
                 a(href=routes.join) Join
